Compilers--practica/pract3/pract3/Pract3Parser.java
// Generated from Pract3.g4 by ANTLR 4.5

  // import java packages
  import java.lang.String;
  import java.util.Set;
  import java.util.HashSet;
  import java.util.Arrays;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Pract3Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, BOOK_KEY=2, ARTICLE_KEY=3, INPROCEEDINGS_KEY=4, UNDEFINED_KEY=5, 
		AUTHOR_KEY=6, TITLE_KEY=7, YEAR_KEY=8, PUBLISHER_KEY=9, JOURNAL_KEY=10, 
		PAGES_KEY=11, VOLUME_KEY=12, NUMBER_KEY=13, MONTH_KEY=14, ISSN_KEY=15, 
		DOI_KEY=16, ADDRESS_KEY=17, URL_KEY=18, BOOKTITLE_KEY=19, FS=20, RS=21, 
		EQ=22, QM=23, LB=24, RB=25, LCB=26, RCB=27, NUMBER=28, WORD=29;
	public static final int
		RULE_bibtex = 0, RULE_string = 1, RULE_address = 2, RULE_entry = 3, RULE_book = 4, 
		RULE_article = 5, RULE_inproceedings = 6, RULE_undefined = 7, RULE_book_type_value = 8, 
		RULE_book_fields = 9, RULE_book_field = 10, RULE_article_type_value = 11, 
		RULE_article_fields = 12, RULE_article_field = 13, RULE_inproceedings_type_value = 14, 
		RULE_inproceedings_fields = 15, RULE_inproceedings_field = 16, RULE_ig_type_value = 17, 
		RULE_ig_fields = 18, RULE_ig_field = 19, RULE_author_field = 20, RULE_title_field = 21, 
		RULE_publisher_field = 22, RULE_pages_field = 23, RULE_volume_field = 24, 
		RULE_number_field = 25, RULE_journal_field = 26, RULE_booktitle_field = 27, 
		RULE_year_field = 28, RULE_month_field = 29, RULE_issn_field = 30, RULE_doi_field = 31, 
		RULE_address_field = 32, RULE_url_field = 33, RULE_any_value = 34, RULE_text_value = 35, 
		RULE_numeric_value = 36, RULE_month_value = 37, RULE_month = 38, RULE_numeric_range = 39, 
		RULE_issn_range = 40, RULE_address_value = 41;
	public static final String[] ruleNames = {
		"bibtex", "string", "address", "entry", "book", "article", "inproceedings", 
		"undefined", "book_type_value", "book_fields", "book_field", "article_type_value", 
		"article_fields", "article_field", "inproceedings_type_value", "inproceedings_fields", 
		"inproceedings_field", "ig_type_value", "ig_fields", "ig_field", "author_field", 
		"title_field", "publisher_field", "pages_field", "volume_field", "number_field", 
		"journal_field", "booktitle_field", "year_field", "month_field", "issn_field", 
		"doi_field", "address_field", "url_field", "any_value", "text_value", 
		"numeric_value", "month_value", "month", "numeric_range", "issn_range", 
		"address_value"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, "'@book'", "'@article'", "'@inproceedings'", null, "'author'", 
		"'title'", "'year'", "'publisher'", "'journal'", "'pages'", "'volume'", 
		"'number'", "'month'", "'issn'", "'doi'", "'address'", "'url'", "'booktitle'", 
		"','", "'-'", "'='", "'\"'", "'('", "')'", "'{'", "'}'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "WS", "BOOK_KEY", "ARTICLE_KEY", "INPROCEEDINGS_KEY", "UNDEFINED_KEY", 
		"AUTHOR_KEY", "TITLE_KEY", "YEAR_KEY", "PUBLISHER_KEY", "JOURNAL_KEY", 
		"PAGES_KEY", "VOLUME_KEY", "NUMBER_KEY", "MONTH_KEY", "ISSN_KEY", "DOI_KEY", 
		"ADDRESS_KEY", "URL_KEY", "BOOKTITLE_KEY", "FS", "RS", "EQ", "QM", "LB", 
		"RB", "LCB", "RCB", "NUMBER", "WORD"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Pract3.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	  // Keep a list of valid months, more explanation is given in the setMonth() method why
	  // we choose this approach
	  public final static Set validMonths = new HashSet(Arrays.asList(new String[] {
	    "January", "Februari", "March", "April", "May", "June",
	    "Juli", "August", "September", "October", "November", "December",
	    "Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec",
	    "1", "2", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12"
	  }));

	  // Accession number of the records
	  public static int rec_accession = 1; // Record counter

	  // Information about the record being processed
	  public static int current_ref_type = -1; // Type of the current record
	  public static String current_year = "";  // Year of the current record
	  public static String current_month = ""; // Month of the current record

	  public static boolean labelSet;
	  public static boolean authorSet;
	  public static boolean titleSet;
	  public static boolean yearSet;
	  public static boolean publisherSet;
	  public static boolean journalSet;
	  public static boolean volumeSet;
	  public static boolean numberSet;
	  public static boolean pagesSet;
	  public static boolean booktitleSet;

	  // EndNote XML print methods
	  public static void xmlout(String x, String y) { System.out.println("<"+x+">"+y+"</"+x+">");}
	  public static void xmlb(String x)             { System.out.println("<" +x+">");}
	  public static void xmle(String x)             { System.out.println("</"+x+">");}

	  // Begins a record with an ID
	  public static void printBeginRecord(int id) {
	    // Start of a new record: unset all the varibales
	    resetSetters();
	    resetCurrent();

	    // Start a new record entry
	    xmlb("record");
	    xmlout("rec-number", "" + rec_accession);
	    rec_accession++;

	    // Set the current ref type
	    current_ref_type = id;
	  }

	  // Ends a record
	  public static void printEndRecord() {
	    // Now we've parsed all information, we'll have to do some additional work:
	    //
	    // Check wether all mandatory fields exist
	    switch (current_ref_type) {
	      case 6: // Book
	        if (!(labelSet && authorSet && titleSet && yearSet && publisherSet)) {
	          System.err.println("Please set all mandatory book fields");
	        }
	        break;
	      case 17: // Article: special case with the (volume and number) or year here
	        if (!(labelSet && authorSet && titleSet && journalSet && pagesSet && ((volumeSet && numberSet) || yearSet))) {
	          System.err.println("Please set all mandatory article fields");
	        }
	        break;
	      case 47: // Inproceedings
	        if (!(labelSet && authorSet && titleSet && booktitleSet && yearSet)) {
	          System.err.println("Please set all mandatory inproceedings fields");
	        }
	        break;
	      default:
	        // This should not happen
	        System.err.println("This ref type was not recognized and should have been ignored" + current_ref_type);
	    }

	    // Print the dates
	    printDates();

	    xmle("record");
	  }

	  // Prints the ref-type
	  public static void printLabel(String l) {
	    System.out.println("<ref-type name=\"" + l + "\">" + current_ref_type + "</ref-type>");
	  }

	  // Prints the authors
	  public static void printAuthors(String as) {
	    String[] authors = as.split(" and | AND ");

	    xmlb("contributors");
	    xmlb("authors");

	    for(String author : authors) {
	        xmlout("author", author);
	    }

	    xmle("authors");
	    xmle("contributors");
	  }

	  // Print the title
	  public static void printTitle(String t) {
	    xmlb("titles");
	    xmlout("title", t);
	    xmle("titles");
	  }

	  // Print the volume
	  public static void printVolume(String v) {
	    xmlout("volume", v);
	  }

	  // Print the number
	  public static void printNumber(String n) {
	    xmlout("number", n);
	  }

	  // Print the pages
	  public static void printPages(String begin, String end) {
	    int b = Integer.parseInt(begin);
	    int e = Integer.parseInt(end);

	    if (b > e) {
	      System.err.println("Beginning of page range is bigger than ending.");
	    } else {
	      xmlout("pages", b + "--" + e);
	    }
	  }

	  // Print the publisher
	  public static void printPublisher(String p) {
	    xmlout("publisher", p);
	  }

	  // Print the dates
	  public static void printDates() {
	    if(!"".equals(current_month) || !"".equals(current_year)) {
	      xmlb("dates");
	      if(!"".equals(current_year)) {
	        xmlout("year", current_year);
	      }
	      if(!"".equals(current_month)) {
	        xmlout("month", current_month);
	      }
	      xmle("dates");
	    }
	  }

	  // Sets the year variable
	  public static void setYear(String y) {
	    yearSet = true;
	    current_year = y;
	  }

	  // Sets the month variable
	  // This needs some explanation: It should be possible to check the validity of
	  // the formatting of the months in the language by checking if the value is one of
	  // January .. December, Jan .. Dec or 1..12. But this approach prohibited two things:
	  // If the month was misspelled (Ian instead of Jan for example), it wouldn't trigger
	  // any error as it matched the ig_field (which ignores fields who shouldn't be in the
	  // BibTex type. So it was not possible to trigger a custom error.
	  // Instead, we'll match any WORD or NUMBER, parse it within Java and trigger an error
	  // if the value isn't an allowed value.
	  public static void setMonth(String m) {
	    // If the validMonths set contains m, all is good, proceed:
	    if(validMonths.contains(m)) {
	      current_month = m;
	    } else { // Else, find out which format the user used and trigger an appropriate warning
	      // Check if we have a number
	      int month_number;
	      try {
	        month_number = Integer.parseInt(m);
	      } catch(NumberFormatException e) {
	        // We don't have a number, so it's probably a string:
	        if(m.length() == 3) { // Did the user mistype a 3-letter abbreviation?
	          System.err.println("It seems like you entered a wrong 3-letter abbreviation. Please use "
	                           + "one of the following: Jan, Feb, Mar, Apr, May, Jun, Jul, Aug, Sep, Oct, Nov, Dec. "
	                           + "Full month names and numbers (1..12) are also allowed.");
	        } else { // Or did he perhaps mistype the full name?
	          System.err.println("It seems like you entered an unexisting month name. "
	                           + "Abbreviated month names and numbers (1..12) are also allowed.");
	        }
	        return;
	      }
	      // We have a number, but why is it wrong?
	      System.err.println("Please provide a valid number for the month field between 1 and 12. "
	                      + "Full month names and 3-letter abbreviatons are also allowed.");
	    }
	  }

	  // Set and unset the set variables methods
	  public static void setLabel()     { labelSet     = true; }
	  public static void setAuthor()    { authorSet    = true; }
	  public static void setTitle()     { titleSet     = true; }
	  public static void setPublisher() { publisherSet = true; }
	  public static void setJournal()   { journalSet   = true; }
	  public static void setVolume()    { volumeSet    = true; }
	  public static void setNumber()    { numberSet    = true; }
	  public static void setPages()     { pagesSet     = true; }
	  public static void setBooktitle() { booktitleSet = true; }

	  public static void resetSetters() {
	    labelSet     = false;
	    authorSet    = false;
	    titleSet     = false;
	    yearSet      = false;
	    publisherSet = false;
	    volumeSet    = false;
	    numberSet    = false;
	    journalSet   = false;
	    pagesSet     = false;
	    booktitleSet = false;
	  }

	  // Reset the current variables
	  public static void resetCurrent() {
	    current_ref_type = -1;
	    current_year = "";
	    current_month = "";
	  }

	public Pract3Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class BibtexContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(Pract3Parser.EOF, 0); }
		public List<EntryContext> entry() {
			return getRuleContexts(EntryContext.class);
		}
		public EntryContext entry(int i) {
			return getRuleContext(EntryContext.class,i);
		}
		public BibtexContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bibtex; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Pract3Listener ) ((Pract3Listener)listener).enterBibtex(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Pract3Listener ) ((Pract3Listener)listener).exitBibtex(this);
		}
	}

	public final BibtexContext bibtex() throws RecognitionException {
		BibtexContext _localctx = new BibtexContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_bibtex);
		System.out.println("<?xml version=\"1.0\" encoding=\"UTF-8\" ?>\r\n<xml>\r\n<records>");
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOK_KEY) | (1L << ARTICLE_KEY) | (1L << INPROCEEDINGS_KEY) | (1L << UNDEFINED_KEY))) != 0)) {
				{
				{
				setState(84);
				entry();
				}
				}
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(90);
			match(EOF);
			}
			System.out.println("</records>\r\n</xml>");
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringContext extends ParserRuleContext {
		public List<TerminalNode> WORD() { return getTokens(Pract3Parser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(Pract3Parser.WORD, i);
		}
		public StringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Pract3Listener ) ((Pract3Listener)listener).enterString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Pract3Listener ) ((Pract3Listener)listener).exitString(this);
		}
	}

	public final StringContext string() throws RecognitionException {
		StringContext _localctx = new StringContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_string);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(WORD);
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WORD) {
				{
				{
				setState(93);
				match(WORD);
				}
				}
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AddressContext extends ParserRuleContext {
		public List<StringContext> string() {
			return getRuleContexts(StringContext.class);
		}
		public StringContext string(int i) {
			return getRuleContext(StringContext.class,i);
		}
		public List<TerminalNode> FS() { return getTokens(Pract3Parser.FS); }
		public TerminalNode FS(int i) {
			return getToken(Pract3Parser.FS, i);
		}
		public AddressContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_address; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Pract3Listener ) ((Pract3Listener)listener).enterAddress(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Pract3Listener ) ((Pract3Listener)listener).exitAddress(this);
		}
	}

	public final AddressContext address() throws RecognitionException {
		AddressContext _localctx = new AddressContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_address);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			string();
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FS) {
				{
				{
				setState(100);
				match(FS);
				setState(101);
				string();
				}
				}
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EntryContext extends ParserRuleContext {
		public BookContext book() {
			return getRuleContext(BookContext.class,0);
		}
		public ArticleContext article() {
			return getRuleContext(ArticleContext.class,0);
		}
		public InproceedingsContext inproceedings() {
			return getRuleContext(InproceedingsContext.class,0);
		}
		public UndefinedContext undefined() {
			return getRuleContext(UndefinedContext.class,0);
		}
		public EntryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entry; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Pract3Listener ) ((Pract3Listener)listener).enterEntry(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Pract3Listener ) ((Pract3Listener)listener).exitEntry(this);
		}
	}

	public final EntryContext entry() throws RecognitionException {
		EntryContext _localctx = new EntryContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_entry);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			switch (_input.LA(1)) {
			case BOOK_KEY:
				{
				setState(107);
				book();
				}
				break;
			case ARTICLE_KEY:
				{
				setState(108);
				article();
				}
				break;
			case INPROCEEDINGS_KEY:
				{
				setState(109);
				inproceedings();
				}
				break;
			case UNDEFINED_KEY:
				{
				setState(110);
				undefined();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BookContext extends ParserRuleContext {
		public TerminalNode BOOK_KEY() { return getToken(Pract3Parser.BOOK_KEY, 0); }
		public Book_type_valueContext book_type_value() {
			return getRuleContext(Book_type_valueContext.class,0);
		}
		public BookContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_book; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Pract3Listener ) ((Pract3Listener)listener).enterBook(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Pract3Listener ) ((Pract3Listener)listener).exitBook(this);
		}
	}

	public final BookContext book() throws RecognitionException {
		BookContext _localctx = new BookContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_book);
		try {
			enterOuterAlt(_localctx, 1);
			{
			printBeginRecord(6);
			setState(114);
			match(BOOK_KEY);
			setState(115);
			book_type_value();
			printEndRecord();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
